--- a/index.html
+++ b/index.html
@@ -35,33 +35,39 @@
       <!-- header -->
       <header>
          <!-- header inner -->
-         <div class="header">
-            <div class="container">
-               <div class="row">
-                  <div class="col-xl-3 col-lg-3 col-md-3 col-sm-3 col logo_section">
-                     <div class="full">
-                        <div class="center-desk">
-                           <div class="logo"> <a href="index.html"><img src="images/logo.png" alt="#"></a> </div>
-                        </div>
-                     </div>
-                  </div>
-                  <div class="col-xl-9 col-lg-9 col-md-9 col-sm-9">
-                     <div class="menu-area">
-                        <div class="limit-box">
-                           <nav class="main-menu">
-                              <ul class="menu-area-main">
-                                 <li class="active"> <a href="index.html">Inicio</a> </li>
-                                 <li> <a href="about.html">Acerca de Nosotros</a> </li>
-                                 <li><a href="proyectos.html">Proyectos</a></li>
-                                 <li><a href="contacto.html">Contáctanos</a></li>
-                              </ul>
-                           </nav>
-                        </div>
-                     </div>
-                  </div>
-               </div>
-            </div>
+         <header>
+   <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <div class="container">
+         <!-- Logo -->
+         <a class="navbar-brand" href="index.html">
+            <img src="images/logo.png" alt="Logo" style="height:40px;">
+         </a>
+
+         <!-- Botón hamburguesa -->
+         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+         </button>
+
+         <!-- Links -->
+         <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ms-auto">
+               <li class="nav-item">
+                  <a class="nav-link active" href="index.html">Inicio</a>
+               </li>
+               <li class="nav-item">
+                  <a class="nav-link" href="about.html">Acerca de Nosotros</a>
+               </li>
+               <li class="nav-item">
+                  <a class="nav-link" href="proyectos.html">Proyectos</a>
+               </li>
+               <li class="nav-item">
+                  <a class="nav-link" href="contacto.html">Contáctanos</a>
+               </li>
+            </ul>
          </div>
+      </div>
+   </nav>
+</header>
          <!-- end header inner -->
       </header>
       <!-- end header -->
@@ -390,4 +396,5 @@
          
       </script> 
    </body>
+
 </html>
